# amazon-ranking-scrapper

./: .gitignore  LICENSE  README.md  SELECTORS.md  install.bat  main_detail_page.py  main_phase1.py  main_rank_cli.py  main_ui.py  pyproject.toml  run.bat
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-core-geo-scraper-engine/: 01-CONTEXT.md  01-PLAN.md  01-SUMMARY.md
.planning/phases/02-interactive-desktop-ui/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md
.planning/phases/03-output-integration/: 03-01-SUMMARY.md
.planning/phases/04-scheduling-automation/: .continue-here.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/pending/: 2026-01-30-add-option-to-schedule-run.md
02-interactive-ui/: PLAN.md
src/: browser_manager.py  captcha_alerter.py  data_loader.py  detail_scraper.py  exceptions.py  location_handler.py  notification_manager.py  scraper.py  scraper_controller.py
src/ui/: log_handler.py  main_window.py
tests/: test_browser.py  test_data_loader.py  test_location.py  test_scraper.py
tests/fixtures/: amazon_mock.html
